[package]
name = "matches2"
version = "0.1.7"
authors = ["Las <las@protonmail.ch>", "Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT"
repository = "https://github.com/Laaas/matches2"
description = "A macro to evaluate, as a boolean, whether an expression matches a pattern."
documentation = "https://docs.rs/matches2/"
keywords = ["macro", "patterns"]

[lib]
name = "matches2"
path = "lib.rs"
